example/secondfile/objects/Rate_PHI__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rate-PHIs</relationshipLabel>
        <relationshipName>Rate_PHIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deal feild name when populate for oppty record</description>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rate-PHIs</relationshipLabel>
        <relationshipName>Rate_PHIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Id__c</fullName>
        <label>Discount Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_Status__c</fullName>
        <label>Discount Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create Discount Plan In Progress</fullName>
                </value>
                <value>
                    <fullName>Create Discount Plan Successful</fullName>
                </value>
                <value>
                    <fullName>Create Discount Plan Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grandfather_Date__c</fullName>
        <label>Grandfather Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <label>Hierarchy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAmountEditAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAmountEditAllowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGold__c</fullName>
        <label>IsGold</label>
        <summaryFilterItems>
            <field>Rates__c.Rate_Plan_Name__c</field>
            <operation>contains</operation>
            <value>Gold</value>
        </summaryFilterItems>
        <summaryForeignKey>Rates__c.Rate_PHI__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsPlatinum__c</fullName>
        <label>IsPlatinum</label>
        <summaryFilterItems>
            <field>Rates__c.Rate_Plan_Name__c</field>
            <operation>contains</operation>
            <value>Platinum</value>
        </summaryFilterItems>
        <summaryForeignKey>Rates__c.Rate_PHI__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsSilver__c</fullName>
        <label>IsSilver</label>
        <summaryFilterItems>
            <field>Rates__c.Rate_Plan_Name__c</field>
            <operation>contains</operation>
            <value>Silver</value>
        </summaryFilterItems>
        <summaryForeignKey>Rates__c.Rate_PHI__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Effective_date_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Effective date updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Rate_Plan_Status__c</fullName>
        <label>Master Rate Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Path_Code__c</fullName>
        <label>Product Hierarchy Path Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <externalId>true</externalId>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sync_Status__c</fullName>
        <label>Rate Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rates_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rates Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Push__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SA-Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Formula__c</fullName>
        <formula>TEXT(Term__c)</formula>
        <label>Term Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wholesale_Master_Rate_Card_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when Wholesale Master Rate Card is Approved</description>
        <label>Wholesale Master Rate Card Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Rate-PHI</label>
    <listViews>
        <fullName>All_record_types</fullName>
        <columns>NAME</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Rate_PHI__c.Deal_Rate_Card</value>
        </filters>
        <label>All-record types</label>
    </listViews>
    <listViews>
        <fullName>DRP_UAT</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Rates_Retrieved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_PHI__c.Deal_Rate_Card</value>
        </filters>
        <label>DRP-UAT</label>
    </listViews>
    <listViews>
        <fullName>Eff_Today</fullName>
        <columns>NAME</columns>
        <columns>Master_Rate_Plan_Status__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Hierarchy_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_PHI__c.Blanket_Discount,Rate_PHI__c.Master_Rate_Card,Rate_PHI__c.Access_Discount,Rate_PHI__c.Feature_Discount,Rate_PHI__c.Port_Discount</value>
        </filters>
        <filters>
            <field>Effective_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>EffectiveDateEQToday</label>
    </listViews>
    <listViews>
        <fullName>FileterByRatePlanID</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Deal__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rate_Plan_ID__c</field>
            <operation>equals</operation>
            <value>SA-PHI-00141269</value>
        </filters>
        <label>FileterByRatePlanID</label>
    </listViews>
    <listViews>
        <fullName>MIS_and_AVPN</fullName>
        <columns>NAME</columns>
        <columns>Rate_Plan_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rate_Plan_Name__c</field>
            <operation>contains</operation>
            <value>EBM MIS,EBM AVPN</value>
        </filters>
        <label>MIS and AVPN</label>
    </listViews>
    <listViews>
        <fullName>Master_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Deal__c</columns>
        <columns>Master_Rate_Plan_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_PHI__c.Master_Rate_Card</value>
        </filters>
        <label>Master Record Type</label>
    </listViews>
    <listViews>
        <fullName>Master_rate_card</fullName>
        <columns>NAME</columns>
        <columns>Master_Rate_Plan_Status__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_PHI__c.Master_Rate_Card</value>
        </filters>
        <filters>
            <field>Service_Type__c</field>
            <operation>notContain</operation>
            <value>ASE</value>
        </filters>
        <label>Master rate card</label>
    </listViews>
    <listViews>
        <fullName>ORT_Deal_Rate_Plans</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Rates_Retrieved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rate_PHI__c.Deal_Rate_Card</value>
        </filters>
        <label>Deal Rate Plans</label>
    </listViews>
    <nameField>
        <displayFormat>SFDC-{000000}</displayFormat>
        <label>SFDC- Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-PHIs</pluralLabel>
    <recordTypes>
        <fullName>Access_Discount</fullName>
        <active>true</active>
        <label>Access Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blanket_Discount</fullName>
        <active>true</active>
        <label>Blanket Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal_Rate_Card</fullName>
        <active>true</active>
        <description>Whenever Deal Rate plan in Successfull a Rate-PHI of this recod type will be created</description>
        <label>Deal Rate Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature_Discount</fullName>
        <active>true</active>
        <label>Feature Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Rate_Card</fullName>
        <active>true</active>
        <label>Master Rate Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Port_Discount</fullName>
        <active>true</active>
        <label>Port Discount</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>